syntax = "proto3";

package blockjoy.babelsup.v1;

service BabelSup {
    rpc GetLogs(GetLogsRequest) returns (stream GetLogsResponse);
    rpc CheckBabel(CheckBabelRequest) returns (CheckBabelResponse);
    rpc StartNewBabel(stream StartNewBabelRequest) returns (StartNewBabelResponse);
    rpc SetupSupervisor(SetupSupervisorRequest) returns (SetupSupervisorResponse);
}

message GetLogsRequest {}

message GetLogsResponse {
    string log = 1;
}

message CheckBabelRequest {
    uint32 checksum = 1;
}

message CheckBabelResponse {
    enum BabelStatus {
        Ok = 0;
        ChecksumMismatch = 1;
        Missing = 2;
    }

    BabelStatus babel_status = 1;
}

message StartNewBabelRequest {
    oneof babel_bin {
        bytes bin = 1;
        uint32 checksum = 2;
    }
}

message StartNewBabelResponse {
}

message SetupSupervisorRequest {
    string config = 1;
}

message SetupSupervisorResponse {
}
